--- a/styles.css
+++ b/styles.css
@@ -213,9 +213,18 @@ body {
 }
 
 
-h1{
-    align-items: center;
+#content{
     text-align: center;
+    align-items: center;
+    color: #ffffff;
     margin-top: 300px;
-    color: #f0f4f8;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+#content-sub{
+    text-align: center;
+    align-items: center;
+    color: #ffffff;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 30px;
 }
